--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,16 @@
-html,
-body {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* html, */
+/* body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+} */
 
-.container {
+/* .container {
   padding: 0 2rem;
 }
 
@@ -18,18 +22,20 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
+} */
 
-a {
+/* a {
   color: inherit;
   text-decoration: none;
-}
+} */
 
 * {
+  margin: 0px;
+  padding: 0px;
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   html {
     color-scheme: dark;
   }
@@ -37,4 +43,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
